# AI-Talent-Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.amazonq/rules/: project-standards.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-ci.yml  codeql.yml  dependency-review.yml  docker-build.yml  frontend-ci.yml  secret-scanning.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_tables.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/v1/: __init__.py
apps/api/src/api/v1/routes/: health.py
apps/api/src/api/v1/schemas/: auth.py  health.py
apps/api/src/core/: config.py  errors.py  logging.py  middleware.py
apps/api/src/domain/models/: auth.py
apps/api/src/domain/repositories/: base.py  organization.py  user.py
apps/api/src/domain/services/: auth.py
apps/api/src/infrastructure/cache/: redis_client.py
apps/api/src/infrastructure/db/: session.py
apps/api/tests/: conftest.py  test_auth_models.py  test_health.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/sign-in/: page.tsx
apps/web/src/components/: api-health-indicator.tsx  providers.tsx
apps/web/tests/: api-health-indicator.test.tsx
apps/web/tests/e2e/: smoke.spec.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: __init__.py  celery_app.py
apps/worker/src/tasks/: health.py
apps/worker/tests/: test_health_task.py
docs/adr/: 000-template.md  001-llm-gateway.md  002-src-layout.md
infrastructure/docker/: prometheus.yml
scripts/: bootstrap.bat  branch-protection.json  convert_to_lf.py  github-setup.bat
