[project]
name = "talent-platform-worker"
version = "0.1.0"
description = "AI Talent Platform — Celery worker"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.0.0",
    "structlog>=24.2.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
